0425 item slick add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
     <!-- <script src="js/VueSimpleScroll.js"></script> -->
     <!-- <script type="module" src="js/VueSimpleScroll.js"></script> -->
@@ -167,36 +167,93 @@
                             <a><img class="tab04" src="images/product_tab4.png" alt="메인 탭 이미지"></a>
                         </li>
                     </ul>
-                    <div>
-                      <div id="main_box1">
-                        <div><a href="#"><img src="images/bottom_slide (1).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (2).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (3).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (4).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (5).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (6).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (7).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (8).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (9).png" alt="메인 상품 슬라이드 이미지"></a></div>
-                        <div><a href="#"><img src="images/bottom_slide (10).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                    <div class="slide_wrap">
+                      <div class="box_wrap1">
+                        <div>
+                          <div id="main_box1">
+                            <div><a href="#"><img src="images/bottom_slide (1).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (2).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (3).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (4).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (5).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (6).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (7).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (8).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (9).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                            <div><a href="#"><img src="images/bottom_slide (10).png" alt="메인 상품 슬라이드 이미지"></a></div>
+                          </div>
+                        </div>
+                        <!-- <div class="arrow">
+                          <div class="prev_arrow"><i class="fa fa-angle-left"></i></div>
+                          <div class="next_arrow"><i class="fa fa-angle-right"></i></div>
+                        </div> -->
                       </div>
-                      <div class="arrow">
-                        <div class="prev_arrow"><i class="fa fa-arrow-circle-o-left"></i></div>
-                        <div class="next_arrow"><i class="fa fa-arrow-circle-o-right"></i></div>
+                      
+
+
+
+
+                      <div class="box_wrap2">
+                        <div>
+                            <div id="main_box2">
+                              <div><a href="#"><img src="images/snack (1).png" alt="스낵 이미지"></a></div>
+                              <div><a href="#"><img src="images/snack (2).png" alt="스낵 이미지"></a></div>
+                              <div><a href="#"><img src="images/snack (3).png" alt="스낵 이미지"></a></div>
+                              <div><a href="#"><img src="images/snack (4).png" alt="스낵 이미지"></a></div>
+                              <div><a href="#"><img src="images/snack (5).png" alt="스낵 이미지"></a></div>
+                              <!-- (div>a[href="#"]>img[src="images/snack ($)"])*5 -->
+                            </div>
+                        </div>
+                        <!-- <div class="arrow">
+                          <div class="prev_arrow"><i class="fa fa-angle-left"></i></div>
+                          <div class="next_arrow"><i class="fa fa-angle-right"></i></div>
+                        </div> -->
                       </div>
-                      <ul id="main_box2">
-                        <li></li>
-                      </ul>
-                      <ul id="main_box3">
-                        <li></li>
-                      </ul>
-                      <ul id="main_box4">
-                        <li></li>
-                      </ul>
+
+
+
+
+
+                      <div class="box_wrap3">
+                        <div>
+                          <div id="main_box3">
+                            <div><a href="#"><img src="images/milk.png" alt="유제품 이미지"></a></div>
+                          </div>
+                        </div>
+
+                        <!-- <div class="arrow">
+                          <div class="prev_arrow"><i class="fa fa-angle-left"></i></div>
+                          <div class="next_arrow"><i class="fa fa-angle-right"></i></div>
+                        </div> -->
+                      </div>
+
+
+
+
+                    <div class="box_wrap4">
+                      <div>
+                          <div id="main_box4">
+                            <div><a href="#"><img src="images/sauce (1).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (2).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (3).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (4).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (5).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (6).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (7).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (8).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (9).png" alt="소스/간편식 이미지"></a></div>
+                            <div><a href="#"><img src="images/sauce (10).png" alt="소스/간편식 이미지"></a></div>
+                          </div>
+                      </div>
+                      <!-- <div class="arrow">
+                        <div class="prev_arrow"><i class="fa fa-angle-left"></i></div>
+                        <div class="next_arrow"><i class="fa fa-angle-right"></i></div>
+                      </div> -->
+                    </div>
 
 
                     </div>
-                </div>
+                  </div>
             </div>
 
         </article>
