--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <h3>삼양 커뮤니티</h3>
               <span>삼양식품은 여러분과 함께 맛있는 세상을 만들어갑니다.
               </span>
-              <div id="sns">
+              <div id="com_sns">
                 <a href="#"><img src="images/facebook.png" alt="페이스북 아이콘"></a>
                 <a href="#"><img src="images/insta.png" alt="인스타 아이콘"></a>
                 <a href="#"><img src="images/blog.png" alt="블로그 아이콘"></a>
