facebook page plugin add

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v13.0&appId=1178873152847583&autoLogAppEvents=1" nonce="Wy8EiDxy"></script>
     <!-- <script src="js/VueSimpleScroll.js"></script> -->
     <!-- <script type="module" src="js/VueSimpleScroll.js"></script> -->
     <script src="js/main.js"></script>
@@ -273,10 +274,12 @@
               </div>
               <div class="community_wrap">
                 <div id="community_l">
+                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsamyangfoods&tabs=timeline&width=300&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1178873152847583" width="300" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                  <!-- <div class="fb-page" data-href="https://www.facebook.com/samyangfoods" data-tabs="timeline" data-width="300" data-height="700" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/samyangfoods" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/samyangfoods">삼양식품 Samyangfoods</a></blockquote></div> -->
 
 
-
-                  <img src="images/facebook_text.png" alt="삼양식품 페이스북">
+                  
 
 
 
@@ -388,5 +391,6 @@
       </div>
 
     </footer>
+    <div id="fb-root"></div>
 </body>
 </html>
