--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <div class="main_header">
             <div class="wrap">
                 <div>
-                    <a href="#"><img id="logo" src="images/logo.png" alt="로고이미지"></a>
+                    <a href="index.html"><img id="logo" src="images/logo.png" alt="로고이미지"></a>
                 </div>
                 <div>
                     <ul id="gnb">
                         <li>
-                            <a href="#">회사소개</a>
+                            <a href="company/index.html">회사소개</a>
                             <ul class="sub">
-                                <li><a href="#">삼양식품</a></li>
+                                <li><a href="company/index.html">삼양식품</a></li>
                                 <li><a href="#">지주사</a></li>
                                 <li><a href="#">계열사</a></li>
                                 <li><a href="#">해외법인</a></li>
@@ -351,7 +351,7 @@
         
         <div class="footer_m">
           <ul class="footer_menu">
-            <li><a href="#">회사소개</a></li>
+            <li><a href="company/index.html">회사소개</a></li>
             <li><a href="#">고객지원</a></li>
             <li><a href="#">IR</a></li>
             <li><a href="#">인재채용</a></li>
