0428 company_history modify

--- a/company/index.html
+++ b/company/index.html
@@ -350,7 +350,7 @@
                     <img src="../images/history_banner.jpg" alt="연혁 배너 이미지">
                   </div>
 
-                  <div>
+                  <div class="history_wrap">
                     <div class="history_list" id="history000">
                       <table class="history_table1">
                         <tbody>
