--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
         <div class="main_header">
             <div class="wrap">
                 <div>
@@ -127,19 +127,51 @@
                 </div>
             </div>
         </div>
+        <div id="m_header_wrap">
+          <div id="m_header">
+            <div><a href="#" class="gnb_shop">쇼핑몰</a></div>
+            <div><a href="#"><img src="images/m_logo.png" alt="모바일 로고 이미지"></a></div>
+            <div><i class="fa-solid fa-bars"></i></div>
+          </div>
+        </div>
+
+        
+        <div id="m_header_menu">
+          <ul>
+            <li><a href="#">회사소개</a></li>
+            <li><a href="#">홍보관</a></li>
+            <li><a href="#">지속가능경영</a></li>
+            <li><a href="#">브랜드</a></li>
+            <li><a href="#">제품</a></li>
+            <li><a href="#">고객지원</a></li>
+          </ul>
+        </div>
+        
         <div id="m_back"></div>
     </header>
-    <div id="slide">
-        <div><a href=""><img src="images/main_slide (1).jpg" alt="메인 슬라이드 이미지"></a></div>
-        <div><a href=""><img src="images/main_slide (2).jpg" alt="메인 슬라이드 이미지"></a></div>
-        <div><a href=""><img src="images/main_slide (3).jpg" alt="메인 슬라이드 이미지"></a></div>
-        <div><a href=""><img src="images/main_slide (4).jpg" alt="메인 슬라이드 이미지"></a></div>
-        <div><a href=""><img src="images/main_slide (5).jpg" alt="메인 슬라이드 이미지"></a></div>
-        <div><a href=""><img src="images/main_slide (6).jpg" alt="메인 슬라이드 이미지"></a></div>
+    <div id="main_slide_wrap">
+      <div id="slide">
+          <div><a href=""><img src="images/main_slide (1).jpg" alt="메인 슬라이드 이미지"></a></div>
+          <div><a href=""><img src="images/main_slide (2).jpg" alt="메인 슬라이드 이미지"></a></div>
+          <div><a href=""><img src="images/main_slide (3).jpg" alt="메인 슬라이드 이미지"></a></div>
+          <div><a href=""><img src="images/main_slide (4).jpg" alt="메인 슬라이드 이미지"></a></div>
+          <div><a href=""><img src="images/main_slide (5).jpg" alt="메인 슬라이드 이미지"></a></div>
+          <div><a href=""><img src="images/main_slide (6).jpg" alt="메인 슬라이드 이미지"></a></div>
+      </div>
+      <button type="button" class="slick_prev"><i class="fa fa-angle-left"></i></button>
+      <button type="button" class="slick_next"><i class="fa fa-angle-right"></i></button>
+    </div>
+    <div id="m_main_slide">
+      <div><a href="#"><img src="images/m_main_slide (1).jpg" alt="모바일 메인 슬라이드"></a></div>
+      <div><a href="#"><img src="images/m_main_slide (2).jpg" alt="모바일 메인 슬라이드"></a></div>
+      <div><a href="#"><img src="images/m_main_slide (3).jpg" alt="모바일 메인 슬라이드"></a></div>
+      <div><a href="#"><img src="images/m_main_slide (4).jpg" alt="모바일 메인 슬라이드"></a></div>
+      <div><a href="#"><img src="images/m_main_slide (5).jpg" alt="모바일 메인 슬라이드"></a></div>
+      <div><a href="#"><img src="images/m_main_slide (6).jpg" alt="모바일 메인 슬라이드"></a></div>
     </div>
 
     <section>
-        <article>
+        <article class="product_wrap">
             <div class="wrap">
                 <h3>삼향 제품소개</h3>
                 <span>
@@ -256,7 +288,6 @@
                     </div>
                   </div>
             </div>
-
         </article>
 
         <article id="community">
@@ -274,7 +305,7 @@
               </div>
               <div class="community_wrap">
                 <div id="community_l">
-                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsamyangfoods&tabs=timeline&width=300&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1178873152847583" width="300" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                  <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsamyangfoods%2Fposts%2F5100790193324139&width=500&show_text=true&appId=1178873152847583&height=709" width="300" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                   <!-- <div class="fb-page" data-href="https://www.facebook.com/samyangfoods" data-tabs="timeline" data-width="300" data-height="700" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/samyangfoods" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/samyangfoods">삼양식품 Samyangfoods</a></blockquote></div> -->
 
