--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v13.0&appId=1178873152847583&autoLogAppEvents=1" nonce="Wy8EiDxy"></script>
     <!-- <script src="js/VueSimpleScroll.js"></script> -->
     <!-- <script type="module" src="js/VueSimpleScroll.js"></script> -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -420,8 +421,40 @@
         
 
       </div>
+      <div id="m_footer">
+        <div class="m_footer_top">
+          <ul>
+            <li><a href="#">ENGLISH</a></li>
+            <li><a href="#">CHINA</a></li>
+            <li><select id="m_familysite" name="family" id="family">
+              <option value="Family Site">Family Site</option>
+              <option value="삼양맛샵">삼양맛샵</option>
+              <option value="삼양목장">삼양목장</option>
+              <option value="제주우유">제주우유</option>
+            </select></li>
+          </ul>
+        </div>
+        <div class="m_footer_bottom">
+          <ul>
+            <li><a href="/company/index.html">회사소개</a></li>
+            <li><a href="#">고객문의</a></li>
+            <li><a href="#">PC버전</a></li>
+          </ul>
+        </div>
+        <div id="m_addres">
+          <p>
+              사업자 번호: 102-81-05450 &nbsp;&nbsp; 대표이사 : 김정수 <br>
+              서울특별시 성북구 오패산로3길 104(하월곡동) <br>
+              Tel. 02-940-3000 &nbsp;&nbsp; Fax. 02-942-4350 <br><br>
+
+
+              Copyright © Samyang Foods Co., Ltd All Rights Reserved.
+          </p>
+        </div>
+      </div>
 
     </footer>
+
     <div id="fb-root"></div>
 </body>
 </html>
