--- a/company/index.html
+++ b/company/index.html
@@ -210,16 +210,21 @@
                 <div>
                     <p class="intro_txt txt01">
                       <strong>'라면' 에 대한 열정과 신념으로 국내 식품 산업에 큰 획을 긋다</strong>
-                      <img class="m_compnay_img" src="../images/m_company (1).jpg" alt="모바일 회사소개 이미지">
-                      1961년 창업한 삼양식품은 ‘정직과 신용’을 추구하는 기업으로 식품산업 외길을 걸어 왔습니다. <br>
-                      식품으로 인간 백세시대를 열겠다는 창업주의 혼이 담긴 개척정신은 삼양식품이 국민들에게 <br>
+
+                      <img class="m_compnay_img" src="../images/m_company (1).jpg" alt="모바일 회사소개 이미지"><br>
+
+                      1961년 창업한 삼양식품은 ‘정직과 신용’을 추구하는 기업으로 <br>
+                      식품산업 외길을 걸어 왔습니다. <br>
+                      식품으로 인간 백세시대를 열겠다는 창업주의 혼이 담긴<br>
+                      개척정신은 삼양식품이 국민들에게 <br>
                       신뢰받는 기업이 되는 밑거름이 되었습니다. <br>
-                      삼양식품은 열정과 도전으로 안전하고 건강한 먹거리를 만들기 위해 최선의 노력을 다하겠습니다.
+                      삼양식품은 열정과 도전으로 안전하고 건강한 먹거리를 만들기<br>
+                      위해 최선의 노력을 다하겠습니다.
                       <br><br>
-                      <strong>1963년 9월, 국내 최초로 라면 생산</strong>
+                      <strong>1963년 9월, 국내 최초로 라면 생산</strong><br>
                       유일한 주식이었던 쌀과 잡곡, 그것마저도 부족하여 허리띠를 졸라 매야했던 1960년대. <br>
                       식량난 극복을 위해 삼양식품은 1963년 국내 최초로 ‘삼양라면’을 생산했고  <br>
-                      이후 라면은 제2의 주식으로 자리매김하게 되었습니다.
+                      이후 라면은 제2의 주식으로 자리매김하게 되었습니다.<br><br>
       
                     </p>
                     <p class="intro_txt txt02">
