--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     <div class="video_text">
                       <h4>홍보영상</h4>
                       <p>삼양식품의 다채로운 스토리를<br> 영상으로 보여드립니다.</p>
-                      <a href="#"><img src="/images/btn_more_comm01.png" alt="자세히보기 버튼"></a>
+                      <a href="#"><img src="images/btn_more_comm01.png" alt="자세히보기 버튼"></a>
                     </div>
                   </div>
                   <div class="story">
@@ -333,7 +333,7 @@
                       <h4>삼양 사연</h4>
                       <p>삼양식품과 함께한<br>
                         여러분의 다양한 사연을 기다립니다.</p>
-                      <a href="#"><img src="/images/btn_more_comm01.png" alt="자세히보기 버튼"></a>
+                      <a href="#"><img src="images/btn_more_comm01.png" alt="자세히보기 버튼"></a>
                     </div>
                   </div>
                 </div>
@@ -342,7 +342,7 @@
                     <div class="recipe_text">
                       <h4>맛있는 나눔</h4>
                       <p>모두가 행복한 맛있는 세상</p>
-                      <a href="#"><img src="/images/btn_more_comm03.png" alt="자세히보기 버튼"></a>
+                      <a href="#"><img src="images/btn_more_comm03.png" alt="자세히보기 버튼"></a>
                     </div>
                   </div>
                   <div class="notice">
@@ -356,7 +356,7 @@
                     <div class="shop_text">
                       <h4>삼양 맛샵 오픈</h4>
                       <p>삼양식품의 다양한 제품을 만나보세요.</p>
-                      <a href="#"><img src="/images/btn_more_comm02.png" alt="자세히보기 버튼"></a>
+                      <a href="#"><img src="images/btn_more_comm02.png" alt="자세히보기 버튼"></a>
                     </div>
                   </div>
                 </div>
