--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>삼양식품</title>
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <script src="https://kit.fontawesome.com/a7ee6d9553.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -300,10 +304,10 @@
               <span>삼양식품은 여러분과 함께 맛있는 세상을 만들어갑니다.
               </span>
               <div id="com_sns">
-                <a href="#"><img src="images/facebook.png" alt="페이스북 아이콘"></a>
-                <a href="#"><img src="images/insta.png" alt="인스타 아이콘"></a>
-                <a href="#"><img src="images/blog.png" alt="블로그 아이콘"></a>
-                <a href="#"><img src="images/twitter.png" alt="트위터 아이콘"></a>
+                <a href="https://www.facebook.com/samyangfoods"><img src="images/facebook.png" alt="페이스북 아이콘"></a>
+                <a href="https://www.instagram.com/samyangfoods/"><img src="images/insta.png" alt="인스타 아이콘"></a>
+                <a href="https://blog.naver.com/samyangfoods"><img src="images/blog.png" alt="블로그 아이콘"></a>
+                <a href="https://twitter.com/samyangfoods"><img src="images/twitter.png" alt="트위터 아이콘"></a>
               </div>
               <div class="community_wrap">
 
@@ -393,10 +397,10 @@
 
         <div class="footer_r">
           <div id="footer_sns">
-            <a href="#"><img src="images/footer_blog.png" alt="footer sns blog"></a>
-            <a href="#"><img src="images/footer_insta.png" alt="footer sns insta"></a>
-            <a href="#"><img src="images/footer_twitter.png" alt="footer sns twitter"></a>
-            <a href="#"><img src="images/footer_facebook.png" alt="footer sns facebook"></a>
+            <a href="https://blog.naver.com/samyangfoods"><img src="images/footer_blog.png" alt="footer sns blog"></a>
+            <a href="https://www.instagram.com/samyangfoods/"><img src="images/footer_insta.png" alt="footer sns insta"></a>
+            <a href="https://www.instagram.com/samyangfoods/"><img src="images/footer_twitter.png" alt="footer sns twitter"></a>
+            <a href="https://www.facebook.com/samyangfoods"><img src="images/footer_facebook.png" alt="footer sns facebook"></a>
           </div>
           <div class="footer_family">
             <select name="family" id="family">
